# goose

./: Cargo.toml  RELEASE_CHECKLIST.md
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-acp-macros/: Cargo.toml
crates/goose-acp-macros/src/: lib.rs
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs  lib.rs  tui.rs
crates/goose-cli/src/commands/: configure.rs  info.rs  session.rs  term.rs  tui.rs
crates/goose-cli/src/scenario_tests/: scenario_runner.rs
crates/goose-cli/src/session/: builder.rs  mod.rs
crates/goose-cli/src/tui/: acp.rs  chat.rs  keyboard.rs  markdown.rs  slash.rs  style.rs  views.rs
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs
crates/goose-mcp/src/developer/: mod.rs
crates/goose-mcp/src/shell/: mod.rs  shell_state.rs
crates/goose-models-db/src/canonical/: mod.rs  registry.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/examples/: declarative.rs
crates/goose-providers/src/: anthropic.rs  base.rs  declarative.rs  inventory.rs  lib.rs  model.rs  ollama.rs  openai.rs  retry.rs  utils.rs
crates/goose-providers/src/canonical/: name_builder.rs
crates/goose-providers/src/formats/: anthropic.rs
crates/goose-sdk-types/src/: custom_requests.rs
crates/goose-sdk/src/: custom_requests.rs
crates/goose-server/src/: main.rs  openapi.rs  state.rs
crates/goose-server/src/routes/: agent.rs  config_management.rs  reply.rs  session.rs  session_events.rs
crates/goose-tunnel-ffi/: Cargo.toml
crates/goose-tunnel-ffi/src/: lib.rs
crates/goose-tunnel-ffi/swift-driver/: main.swift  mobile-lifecycle.swift  path-probe.swift  run-mobile.sh  run.sh
crates/goose-types/: Cargo.toml
crates/goose-types/src/: lib.rs
crates/goose/src/: doctor.rs  lib.rs  model.rs  model_config.rs  scheduler.rs  sources.rs
crates/goose/src/acp/: provider.rs  server.rs
crates/goose/src/agents/: agent.rs  (+1 more)
crates/goose/tests/: acp_custom_requests_test.rs  acp_secret_cache_invalidation_test.rs  acp_server_test.rs  agent.rs  compaction.rs  headroom_e2e.rs  local_inference_integration.rs  local_inference_perf.rs  mcp_integration_test.rs  providers.rs  session_id_propagation_test.rs  tetrate_streaming.rs
documentation/docs/getting-started/: providers.md
documentation/docs/guides/: acp-providers.md  cli-providers.md
documentation/notes/: mobile-tunnel-iroh-prototype.md  mobile-tunnel-iroh-research.md
ui/desktop/: openapi.json  package.json  vite.renderer.config.mts
ui/desktop/src/: acpChatFeatureFlag.ts  main.ts
(+194 files in other folders)
