[package]
name = "goose-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = []
aws-providers = []
local-inference = []
cuda = ["local-inference"]
vulkan = ["local-inference"]
rustls-tls = []
native-tls = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["server"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { version = "0.1.22", default-features = false, features = ["std"] }
utoipa = { workspace = true, features = ["chrono"] }
uuid = { workspace = true, features = ["v4", "std"] }
sha2 = { workspace = true }

[dev-dependencies]
env-lock = { workspace = true }
rmcp = { workspace = true, features = ["macros"] }
tempfile.workspace = true
test-case = { workspace = true }
