[package]
name = "goose-tunnel-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "goose_tunnel_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
iroh = "1.0.0-rc.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
uniffi = { version = "0.28", features = ["cli"] }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
